force-app/src/objects/c2g__BankAccountConnection__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbankaccountconnection</customHelpPage>
    <description>Details of the financial institution and bank account connections.</description>
    <fields>
        <fullName>c2g__BankAccountID__c</fullName>
        <description>The bank account ID provided by the bank or other financial institution.</description>
        <label>Bank Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountNumber__c</fullName>
        <description>The bank account number provided by the bank or other financial institution.</description>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountSubType__c</fullName>
        <description>The bank account sub type provided by the bank or other financial institution.</description>
        <label>Bank Account Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountType__c</fullName>
        <description>The bank account type provided by the bank or other financial institution.</description>
        <label>Bank Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Bank Account in Accounting.</description>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Bank Account Connections</relationshipLabel>
        <relationshipName>BankAccountConnections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ConnectedBankAccount__c</fullName>
        <description>The bank account name provided by the bank or other financial institution.</description>
        <label>Connected Bank Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalSource__c</fullName>
        <description>Name of the process that links the bank account to Accounting.</description>
        <label>External Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plaid</fullName>
                    <default>true</default>
                    <label>Plaid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__InstitutionID__c</fullName>
        <description>The unique ID provided by the bank or other financial institution.</description>
        <label>Institution ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InstitutionName__c</fullName>
        <description>The name of the bank or other financial institution.</description>
        <label>Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__IsObsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, indicates that this bank account connection is no longer used.</description>
        <label>Is Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__OpeningBalance__c</fullName>
        <description>Opening balance for the first bank statement to be created when transactions are imported for this bank account.</description>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__StatementStartDate__c</fullName>
        <description>Start date of the first bank statement to be created when transactions are imported for this bank account.</description>
        <label>Statement Start Date</label>
        <type>Date</type>
    </fields>
    <label>Bank Account Connection</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__ExternalSource__c</columns>
        <columns>c2g__InstitutionName__c</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountType__c</columns>
        <columns>c2g__ConnectedBankAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BAC-{000000000}</displayFormat>
        <label>Bank Account Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Account Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>